modified apis to use the standard authorization header instead of my custom auth-token header
