# api-gateway/routes/Auth.js
@@ -4,42 +4,7 @@ const router = express.Router();
 const axios = require('axios');
 const addresses = require("../misc/api_addresses");
 
-
-/**
- * @swagger
- * /login:
- *  post:
- *      tags:
- *          - auth-server-api
- *      description: logs user into the system
- *      parameters:
- *          - in: "body"
- *            name: "body"
- *            type: object
- *            properties:
- *              username:
- *                  type: string
- *                  example: username123
- *              password:
- *                  type: string
- *                  example: password123
- *            required:
- *              - username
- *              - password
- *      responses:
- *          "200":
- *              description: success
- *              headers:
- *                  auth-token:
- *                      type: "string"
- *                      description: "authentication token"
- *          "400":
- *              description: bad parameters/body provided 
- *          "401":
- *              description: unauthorized
- *          "500":
- *              description: internal server error
- */
+ // documentation available at <base_url>/api/api-docs/
  router.post("/login", async (req, res) => {
      console.log("here");
     const payload = {
@@ -48,11 +13,13 @@ const addresses = require("../misc/api_addresses");
     }
     const {username, password} = req.body;
     if(!username || !password){
-        return res.status(400).send("bad parameters/body provided ");
+        return res.status(400).send("Invalid username/password supplied");
     }
     try{
         const response = await axios.post(addresses["auth-server"].concat("/login"), payload);
-        res.status(response.status).header("auth-token", response.headers["auth-token"]).send(response.data);
+        // console.log(response.headers);
+        const token =  response.headers["authorization"].split(" ")[1];
+        res.status(response.status).header("authorization", `Bearer ${token}`).send(response.data);
     }
     catch (err){
         if(err.response){
@@ -64,43 +31,7 @@ const addresses = require("../misc/api_addresses");
     
 });
 
-
-
-/**
- * @swagger
- * /register:
- *  post:
- *      tags:
- *          - auth-server-api
- *      description: create a new user and log them in
- *      parameters:
- *          - in: "body"
- *            name: "body"
- *            type: object
- *            properties:
- *              username:
- *                  type: string
- *                  example: username123
- *              password:
- *                  type: string
- *                  example: password123
- *            required:
- *              - username
- *              - password
- *      responses:
- *          "200":
- *              description: success
- *              headers:
- *                  auth-token:
- *                      type: "string"
- *                      description: "authentication token"
- *          "400":
- *              description: bad parameters/body provided 
- *          "401":
- *              description: unauthorized
- *          "500":
- *              description: internal server error
- */
+ // documentation available at <base_url>/api/api-docs/
  router.post("/register", async (req, res) => {
     const payload = {
         username: req.body.username,
@@ -108,7 +39,8 @@ const addresses = require("../misc/api_addresses");
     }
     try{
         const response = await axios.post(addresses["auth-server"].concat("/register"), payload);
-        res.status(response.status).header("auth-token", response.headers["auth-token"]).send(response.data);
+        const token =  response.headers["authorization"].split(" ")[1];
+        res.status(response.status).header("authorization", `Bearer ${token}`).send(response.data);
     }
     catch (err){
         if(err.response){
