# rest-api-server/routes/Flashcards.js
@@ -5,44 +5,7 @@ const query_func = require("../misc/postgres_helpers");
 var format = require('pg-format');
 
 
-/**
- * @swagger
- * /flashcards/{flashcard_collection_id}:
- *  get:
- *      tags:
- *          - api
- *      description: get all flashcard belonging to the flashcard collection with id {flashcards_collection_id}. Note that if a flashcard collection is private, you will only be able to view said flashcard collection if you are logged in as the user who owns it.
- *      parameters:
- *          - in: "header"
- *            name: "auth-token"
- *            type: string   
- *      responses:
- *          "200":
- *              description: success
- *              schema:
- *                  type: "array"
- *                  items:
- *                      type: "object"
- *                      properties:
- *                          front_text:
- *                                  type: string
- *                                  example: 1
- *                          back_text:
- *                                  type: string
- *                                  example: "English Word Definitions"
- *                          front_image_url:
- *                                  type: string 
- *                                  example: "https://website/someImage.jpg"
- *                          back_image_url:
- *                                  type: string
- *                                  example: "https://website/someImage.jpg"
- *          "400":
- *              description: bad parameters/body provided 
- *          "401":
- *              description: unauthorized
- *          "500":
- *              description: failed to insert into db due to failed constraint or an internal server error occurred
- */
+ // documentation available at <base_url>/api/api-docs/
  router.get("/flashcards/:flashcard_collection_id", async (req, res) => {
     
     query_func(pgClient, `SELECT * FROM flashcard_collection WHERE id=${req.params.flashcard_collection_id};`, [])
